2008-10-05  Luke Kenneth Casson Leighton  <lkcl@lkcl.net>

        Reviewed by David Hyatt.

        GTK_WINDOW_HWND not GTK_WINDOWING_HWND
        https://bugs.webkit.org/show_bug.cgi?id=20725

        Updated to ToT by Jan Alonzo.

        * plugins/gtk/PluginViewGtk.cpp:
        (WebCore::PluginView::getValue):

2008-10-05  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Darin Adler.

        Invalid cast from GdkWindow to GtkWidget
        https://bugs.webkit.org/show_bug.cgi?id=21391

        Fix a misplaced closing parenthesis to actually cast the widget, not the window

        * platform/gtk/PlatformScreenGtk.cpp:
        (WebCore::screenDepth):

2008-10-05  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Alder.

        Attach the Origin header to POST requests to help defend against
        cross-site request forgery.

        https://bugs.webkit.org/show_bug.cgi?id=20792

        Collin Jackson <collinj@webkit.org> also contributed to this patch.

        Tests: http/tests/security/originHeader/origin-header-for-data.html
               http/tests/security/originHeader/origin-header-for-empty.html
               http/tests/security/originHeader/origin-header-for-get.html
               http/tests/security/originHeader/origin-header-for-https.html
               http/tests/security/originHeader/origin-header-for-post.html

        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::createWindow):
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::createWindow):
        (WebCore::FrameLoader::urlSelected):
        (WebCore::FrameLoader::submitForm):
        (WebCore::FrameLoader::outgoingOrigin):
        (WebCore::FrameLoader::loadURL):
        (WebCore::FrameLoader::addExtraFieldsToRequest):
        (WebCore::FrameLoader::loadPostRequest):
        (WebCore::FrameLoader::loadResourceSynchronously):
        (WebCore::FrameLoader::loadItem):
        * loader/FrameLoader.h:
        * loader/SubresourceLoader.cpp: